// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsList render should match its snapshot 1`] = `
<ul
  className="bcs-VersionsList"
/>
`;

exports[`elements/content-sidebar/versions/VersionsList render should match its snapshot 2`] = `
<ul
  className="bcs-VersionsList"
>
  <li
    className="bcs-VersionsList-item"
    key="12345"
  >
    <Route
      render={[Function]}
    />
  </li>
</ul>
`;

exports[`elements/content-sidebar/versions/VersionsList render should match its snapshot 3`] = `
<ul
  className="bcs-VersionsList"
>
  <li
    className="bcs-VersionsList-item"
    key="12345"
  >
    <Route
      render={[Function]}
    />
  </li>
  <li
    className="bcs-VersionsList-item"
    key="45678"
  >
    <Route
      render={[Function]}
    />
  </li>
</ul>
`;
